loxrs_interpreter/src/lox/interpreter/test/e2e/pass/class.lox
class Cream {
  serve() {
    return "Scones for " + this.name;
  }
}

fun forMe(cream) {
  cream.name = "me";
  return cream;
}

var mine = Cream();
var yours = forMe(mine).serve;

print yours();
mine.name = "you";

print yours();
