loxrs_interpreter/src/lox/interpreter/test/e2e/fail/bad_unused.lox
fun bad() {
  var a;
  var b;
  {
    b = 33;
  }
}

print a;
